# RetreatNest

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  example.env
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_users.rs  m20250914_055232_updated_at_trigger.rs  m20250914_055447_add_updated_at_trigger_in_users.rs  m20251008_141025_retreat_and_retreat_users.rs  m20251030_145305_user_wishlist.rs  m20251030_150713_retreat_reviews.rs  m20251103_162943_retreat_gallery.rs  m20251109_154739_gallery_category.rs
src/: env.rs  lib.rs  main.rs  state.rs
src/entities/: categories.rs  gallery_categories.rs  mod.rs  prelude.rs  retreat_galleries.rs  retreat_reviews.rs  retreat_users.rs  retreats.rs  users.rs  wishlists.rs
src/entities_helper/: categories.rs  gallery_categories.rs  mod.rs  retreat_galleries.rs  retreat_reviews.rs  retreat_users.rs  retreats.rs  users.rs  wishlists.rs
src/routes/: auth.rs  categories.rs  gallery_categories.rs  health.rs  mod.rs  retreat_galleries.rs  retreat_reviews.rs  retreats.rs  users.rs  wishlists.rs
src/serializers/: auth.rs  categories.rs  gallery_categories.rs  mod.rs  retreat_galleries.rs  retreat_reviews.rs  retreats.rs  users.rs  wishlists.rs
src/utils/: jwt.rs  macros.rs  mod.rs  password.rs  response.rs  serializer.rs  storage.rs
src/utils/extractors/: auth.rs
src/utils/middlewares/: panic.rs
