[package]
name = "my_retreat_nest"
version = "0.1.0"
edition = "2024"

[dependencies]
# --- Core ---
anyhow = "1.0.100"
dotenvy = "0.15.7"
once_cell = "1.21.3"
const-str = "0.7.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
validator = { version = "0.20.0", features = ["derive"] }

# --- Async runtime ---
tokio = { version = "1.48.0", features = ["fs", "io-std", "io-util", "macros", "rt-multi-thread"] }

# --- Web framework ---
axum = { version = "0.8.6", features = ["multipart"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["catch-panic", "compression-gzip"] }

# --- ORM & Database ---
sea-orm = { version = "1.1.17", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
migration = { path = "migration" }

# --- Auth & Security ---
jwt-simple = "0.12.13"
password-worker = { version = "0.4.0", features = ["rust-argon2"] }

# jemallocator, optional and cross-platform
jemallocator = { version = "0.5", optional = true }

[features]
default = ["with-jemalloc"]
# Feature to enable jemalloc globally
with-jemalloc = ["dep:jemallocator"]

# Platform-specific jemalloc features
[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
jemallocator = { version = "0.5", features = ["background_threads"], optional = true }

[workspace]
members = [
    "migration",
    "."
]

[dev-dependencies]
watch = "0.2.3"

# ===========================
# Performance Profiles
# ===========================
[profile.release]
opt-level = 3                 # Maximum performance
lto = "fat"                   # Full link-time optimization
codegen-units = 1             # Force LLVM to optimize across the entire crate
panic = "abort"               # Remove unwind logic
strip = "debuginfo"           # Keep minimal debug info (remove symbols)
incremental = false           # Disable incremental for deterministic builds
overflow-checks = false       # Slight perf gain; safe in production

[profile.dev]
opt-level = 1
debug = true
overflow-checks = true
lto = false
incremental = true